<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:id="@+id/view_below"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="@dimen/forecast_detail_vertical_padding"
        android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
        android:paddingLeft="@dimen/forecast_detail_horizontal_padding"
        android:paddingRight="@dimen/forecast_detail_horizontal_padding"
        android:paddingStart="@dimen/forecast_detail_horizontal_padding"
        android:paddingTop="@dimen/forecast_detail_vertical_padding">

        <android.support.constraint.Guideline
            android:id="@+id/horizontal_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7"/>

        <TextView
            android:id="@+id/solarV"
            style="@style/DetailLabel"
            android:text="@string/solar_voltage"
            app:layout_constraintBottom_toBottomOf="@+id/view_below"
            app:layout_constraintLeft_toLeftOf="@+id/view_below"
            app:layout_constraintTop_toTopOf="@+id/view_below"
            app:layout_constraintVertical_bias="0.1"/>

        <TextView
            android:id="@+id/solarVV"
            style="@style/ExtraWeatherMeasurement"
            app:layout_constraintBottom_toBottomOf="@+id/solarV"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="240V"/>

        <TextView
            android:id="@+id/gridV"
            style="@style/DetailLabel"
            android:text="@string/grid_voltage"
            app:layout_constraintBottom_toBottomOf="@+id/view_below"
            app:layout_constraintLeft_toLeftOf="@+id/view_below"
            app:layout_constraintTop_toTopOf="@+id/view_below"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/gridVV"
            style="@style/ExtraWeatherMeasurement"
            app:layout_constraintBottom_toBottomOf="@+id/gridV"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="240V"/>

        <TextView
            android:id="@+id/power"
            style="@style/DetailLabel"
            android:text="@string/power"
            app:layout_constraintBottom_toBottomOf="@+id/view_below"
            app:layout_constraintLeft_toLeftOf="@+id/view_below"
            app:layout_constraintTop_toTopOf="@+id/view_below"
            app:layout_constraintVertical_bias="0.7"/>

        <TextView
            android:id="@+id/powerV"
            style="@style/ExtraWeatherMeasurement"
            app:layout_constraintBottom_toBottomOf="@+id/power"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="50kW"/>

        <TextView
            android:id="@+id/energy"
            style="@style/DetailLabel"
            android:text="@string/energy"
            app:layout_constraintBottom_toBottomOf="@+id/view_below"
            app:layout_constraintLeft_toLeftOf="@+id/view_below"
            app:layout_constraintTop_toTopOf="@+id/view_below"
            app:layout_constraintVertical_bias="1"/>

        <TextView
            android:id="@+id/energyV"
            style="@style/ExtraWeatherMeasurement"
            app:layout_constraintBottom_toBottomOf="@+id/energy"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="500kWh"/>
</android.support.constraint.ConstraintLayout>